src/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  line-height: 1.6em;
  color: var(--text-primary);
}

:root {
  font-size: 20px;
  --primary: #1c9797;
  --text-primary: #eff5f6;
  --text-secondary: #d5dbdd;
  --dark: #002633;
}

@media (max-width: 600px) {
  :root {
    font-size: 15px;
  }
}

@media (max-width: 800px) {
  [class*="flex"] {
    flex-direction: column !important;
  }
}

html, body {
  width: 100%;
  min-height: 100vh;
}

body {
  background-color: var(--primary);
}

.text-mono, .text-mono * {
  font-family: 'Source Code Pro', monospace;
}

.text-bold{
  font-weight: bold;
}

.btn-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 1em;
}

.btn {
  all: unset;
  display: inline-block;
  font-size: 0.9rem;
  padding: 0.4em 0.3em;
  margin: 0.4em 0.3em;
  cursor: pointer;
  border: solid 1px var(--text-primary);
  color: var(--text-primary);
  transition: color 200ms ease-in-out,
              background-color 200ms ease-in-out,
              border 200ms ease-in-out;
}

.btn-primary{
  border: solid 1px var(--text-primary);
  color: var(--primary);
  background-color: var(--text-primary);
}

.btn-primary:hover {
  border: solid 1px var(--text-primary);
  color: var(--text-primary);
  background-color: var(--primary);
}

.btn-secondary{
  border: solid 1px var(--text-secondary);
  color: var(--text-secondary);
  background-color: var(--primary);
}

.btn-secondary:hover {
  border: solid 1px var(--primary);
  color: var(--primary);
  background-color: var(--text-secondary);
}

.btn-other{
  border: none;
  color: var(--text-secondary);
  background-color: var(--primary);
}

.btn-other:hover {
  color: var(--primary);
  background-color: var(--text-secondary);
}

[data-aos][data-aos][data-aos-delay='5000'].aos-animate {
	transition-delay: 5000ms;
}

.flex-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.flex-left {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}

[id^=section-] {
  width: 100%;
  min-height: 100vh;
}

#scroll-down {
  position: absolute;
  bottom: 15vh;
}

.arrow {
  width: 1.25em;
  height: 1.25em;
  border-bottom: solid 3px var(--text-primary);
  border-right: solid 3px var(--text-primary);
  transform: rotate(45deg);
}

#section-2 {
  justify-content: center;
  height: 50vh;
  overflow: hidden;
  position: relative;
}

#section-2::before {
  content: '';
  position: absolute;
  width: 120vw;
  height: 90%;
  background: var(--dark);
  transform: rotate(2deg);
}

#section-2 > * {
  width: auto;
  margin: 0 auto;
  margin: 2em;
  text-align: justify;
}

#bits-2-1 {
  gap: 2em;
}

.profile {
  border-radius: 100%;
  height: 12.5rem;
  width: 12.5rem;
  border: solid 0.5em var(--text-primary);
}

#bits-2-2 {
  max-width: 75ch;
}

#section-3 {
  justify-content: space-evenly;
  row-gap: 1em;
}

#section-3 > * {
  flex-direction: row;
  gap: 1em;
  width: auto;
  margin: 2em;
}

.project-details {
  height: 100%;
  width: auto;
  max-width: 55ch;
}

.project-details p {
  text-align: justify;
}

.project-image-container {
  height: 100%;
  width: auto;
  max-width: 55ch;
  overflow: hidden;
  border-radius: 10px;
  line-height: 0;
}

.project-image {
  height: auto;
  width: 100%;
  object-fit: cover;
  line-height: 0;
}

#section-4 {
  justify-content: center;
  overflow: hidden;
  position: relative;
  min-height: 75vh;
}

#section-4::before {
  content: '';
  position: absolute;
  width: 120vw;
  height: 100%;
  bottom: -10%;
  background: var(--dark);
  transform: rotate(-5deg);
  z-index: -1;
}

#bits-4-1 {
  width: auto;
  margin: 0 auto;
  margin: 2em;
  text-align: justify;
  max-width: 75ch;
}

.btn-email {
  width: 100%;
  height: auto;
  text-align: center;
  border: solid 1px var(--text-primary);
  color: var(--dark);
  background-color: var(--text-primary);
}

.btn-email:hover {
  border: solid 1px var(--text-primary);
  color: var(--text-primary);
  background-color: var(--dark);
}

footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 3em;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 0.75rem;
  color: var(--text-secondary);
}

